@@ -1,13 +1,12 @@
 ACLOCAL_AMFLAGS = -I m4
 
-EXTRA_DIST = mkindex
-
-SUBDIRS = src include wrappers tests
+SUBDIRS = src include wrappers tests bin
 DIST_SUBDIRS = $(SUBDIRS) examples doc
 
-bin_SCRIPTS = lhapdf-config lhapdf
+EXTRA_DIST = mkindex
 dist_pkgdata_DATA = lhapdf.conf pdfsets.index
-# TODO: Add plotpdfs, testpdfs, testlhapdf as noinst_SCRIPTS?
+
+noinst_SCRIPTS = plotpdfs testpdfs testlhapdf
 
 pkgconfigdir = $(libdir)/pkgconfig
 dist_pkgconfig_DATA = lhapdf.pc
