@@ -173,10 +173,11 @@ AC_CONFIG_FILES([Makefile])
 AC_CONFIG_FILES([src/Makefile])
 AC_CONFIG_FILES([src/yamlcpp/Makefile])
 AC_CONFIG_FILES([include/Makefile include/LHAPDF/Makefile])
+AC_CONFIG_FILES([bin/Makefile])
+AC_CONFIG_FILES([bin/lhapdf bin/lhapdf-config])
 AC_CONFIG_FILES([examples/Makefile])
 AC_CONFIG_FILES([tests/Makefile])
 AC_CONFIG_FILES([doc/Makefile doc/Doxyfile])
-AC_CONFIG_FILES([lhapdf lhapdf-config])
 AC_CONFIG_FILES([lhapdf.pc])
 AC_CONFIG_FILES([wrappers/Makefile])
 AC_CONFIG_FILES([wrappers/python/Makefile wrappers/python/setup.py])
