@@ -1,3 +1,7 @@
+2016-02-09  Andy Buckley  <andy.buckley@cern.ch>
+
+	* Move scripts for installation into a bin directory.
+
 2016-02-08  Andy Buckley  <andy.buckley@cern.ch>
 
 	* Corrections in the lhapdf manager script for Python3 compatibility. Thanks to Frank Siegert.
